--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ out/
 # Logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # OS
 .DS_Store
@@ -34,3 +36,13 @@ Thumbs.db
 # Testing
 coverage/
 .nyc_output/
+
+# Next.js specific
+/.pnp
+.pnp.js
+.vercel
+*.tsbuildinfo
+next-env.d.ts
+
+# Misc
+*.pem
