--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@libsql/client": "^0.14.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.30.10",
     "fastify": "^4.26.0",
     "nanoid": "^5.0.7",
