--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "async-mutex": "^0.5.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.0",
     "dotenv": "^17.2.3",
