feat: add frontend demo with dark mode and responsive design
- Add complete frontend UI with availability grid, reservation form, and reservations list
- Implement dark mode with ThemeProvider and ThemeToggle component
- Configure Tailwind CSS 4 dark mode with @custom-variant
- Add CORS support to backend for frontend integration
- Improve responsive design for availability grid (better breakpoints)
- Clean up debug logs
- Add date-fns for date handling in frontend
- Style improvements: centered time slots, better spacing

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@libsql/client": "^0.14.0",
     "async-mutex": "^0.5.0",
     "date-fns": "^3.6.0",
