--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "drizzle-kit": "^0.21.0",
+    "pino-pretty": "^13.1.3",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
