feat: Redis distributed locks per 15-min slot [start,end)
- Replace in-memory async-mutex with Redis locks
- acquireReservationLocks({ sectorId, startISO, endISO, ttlMs? }) locks each 15-min slot in [start,end)
- Keys: lock:sector:{sectorId}:slot:{slotISO}; SET NX PX; release via Lua (GET==token then DEL)
- Add redis.ts (ioredis), REDIS_URL env (default redis://localhost:6379)
- Integrate in create/update reservation with try/finally await releaseLock()
- Test: overlapping slots (20:00 vs 20:15) one 201 one 409
- README: Redis section, REDIS_URL, docker run for local

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=libsql://your-db-name.turso.io
 TURSO_AUTH_TOKEN=your-turso-auth-token-here
+REDIS_URL=redis://localhost:6379
 PORT=3001
 NODE_ENV=development
